Fix context menu location from being too high

--- a/src/frontend/scss/site/_toolbox.scss
+++ b/src/frontend/scss/site/_toolbox.scss
@@ -16,6 +16,10 @@
     animation: toolsAnimateIn 100ms ease-out both;
 }
 
+.toolbox-wrapper {
+    height: 0;
+}
+
 .toolbox-menu-group {
     line-height: 1;
     color: var(--CT_toolboxMenuColor);
